[package]
name = "nockchain-pool-server"
version = "0.1.0"
edition = "2021"
description = "Nockchain矿池服务器 | Nockchain mining pool server"

[[bin]]
name = "pool-server"
path = "src/main.rs"

[dependencies]
nockchain = { path = "../nockchain" }
tokio = { version = "1", features = ["full", "tracing"] }
tonic = { version = "0.9", features = ["gzip"] }
prost = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4"] }
dashmap = "5.4"
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
blake3 = "1.5.1"
hex = "0.4.3"
rand = "0.8.5"
zkvm-jetpack = { path = "../zkvm-jetpack" }
kernels = { path = "../kernels", features = ["miner"] }
nockapp = { path = "../nockapp" }
nockvm = { path = "../nockvm/rust/nockvm" }
nockvm_macros = { path = "../nockvm/rust/nockvm_macros" }
nockchain-libp2p-io = { path = "../nockchain-libp2p-io" }
futures-core = "0.3"
bytes = "1.0"

[build-dependencies]
tonic-build = "0.9" 