[package]
name = "nockchain-pool-server"
version = "0.1.0"
edition = "2021"
description = "Nockchain矿池服务器 | Nockchain mining pool server"

[[bin]]
name = "pool-server"
path = "src/main.rs"

[dependencies]
nockchain = { path = "../nockchain" }
tokio = { workspace = true, features = ["full", "time"] }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
anyhow = { workspace = true }
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "fast-rng"] }
dashmap = "5.4.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
blake3 = "1.3"
hex = "0.4"
rand = "0.8.5"
zkvm-jetpack = { path = "../zkvm-jetpack" }
kernels = { path = "../kernels", features = ["miner"] }
nockapp = { path = "../nockapp" }
nockvm = { path = "../nockvm/rust/nockvm" }
nockvm_macros = { path = "../nockvm/rust/nockvm_macros" }
nockchain-libp2p-io = { path = "../nockchain-libp2p-io" }
futures = "0.3"
bytes = "1.1"
# 添加HTTP服务和JSON序列化的依赖
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
humantime = "2.1"
# 添加HTTP客户端依赖，用于从nockblocks.com获取区块数据
reqwest = { version = "0.11", features = ["json", "timeout"] }
# 添加HTML解析依赖，用于从网页提取区块数据
scraper = "0.18.1"
regex = "1.10.2"
# 添加重试和超时相关依赖
backoff = { version = "0.4", features = ["tokio"] }
async-trait = "0.1"

[build-dependencies]
tonic-build = { workspace = true }