[package]
name = "nockchain"
build = "build.rs"
publish = false
version.workspace = true
edition.workspace = true

[[bin]]
name = "miner"
path = "src/main.rs"

[features]
bazel_build = []
jemalloc = ["tikv-jemallocator"]
pool_client = [] # 矿池客户端模式 | Pool client mode

[dependencies]
hoonc.workspace = true
kernels = { workspace = true, features = ["dumb", "miner"] }
nockapp.workspace = true
nockvm.workspace = true
nockvm_macros.workspace = true

bitcoincore-rpc.workspace = true
bs58.workspace = true
clap.workspace = true
equix = "0.2.2" # 确保版本正确，这个版本有Solver结构体
futures.workspace = true
ibig.workspace = true
libp2p = { workspace = true, features = [
    "ping",
    "kad",
    "identify",
    "quic",
    "tls",
    "dns",
    "tokio",
    "macros",
    "request-response",
    "cbor",
] }
nockchain-libp2p-io.workspace = true
tempfile = { workspace = true }
termcolor.workspace = true
tikv-jemallocator = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-test.workspace = true
num_cpus = { workspace = true }
rand = { workspace = true }

# 新增gRPC客户端依赖 | Add gRPC client dependencies
tonic = { version = "0.9", features = ["gzip"] }
prost = "0.11"
uuid = { version = "1.3", features = ["v4"] }
chrono = "0.4"
anyhow = "1.0"
blake3 = "1.5.0" # 添加blake3依赖
async-stream = "0.3.5" # 添加async-stream依赖
hex = "0.4.3" # 可能需要用于比较哈希值

zkvm-jetpack.workspace = true

[build-dependencies]
vergen = { workspace = true, features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
    "si",
] }
tonic-build = "0.9"
